fixed structure and base.html to index.html name

--- a/optionality.html
+++ b/optionality.html
@@ -14,7 +14,7 @@
     <table style="width: 100%; vertical-align: top;">
       <tr>
         <h2>
-          <a href="./base.html">UCF Options Curriculum</a>
+          <a href="./index.html">UCF Options Curriculum</a>
           
 Optionality
 
