--- a/site/about.html
+++ b/site/about.html
@@ -23,6 +23,7 @@ About
       <hr>
       <tr>
         <td style="width: 13em; font-size: 80%; vertical-align: top;">
+        <div style="margin-top: 20px;"></div>
           <ul class="navlist">
             <a href="./about.html">About</a>
           </ul>
