--- a/calls_and_puts.html
+++ b/calls_and_puts.html
@@ -55,7 +55,7 @@ Calls and Puts
                 </li>
               
                 <li>
-                  <a href="./when_to_exercise.html">Exercising</a>
+                  <a href="./when_to_exercise.html">When To Exercise</a>
                 </li>
               
                 <li>
