--- a/down_upside.html
+++ b/down_upside.html
@@ -55,7 +55,7 @@ Downside vs Upside
                 </li>
               
                 <li>
-                  <a href="./when_to_exercise.html">Exercising</a>
+                  <a href="./when_to_exercise.html">When To Exercise</a>
                 </li>
               
                 <li>
