--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </li>
               
                 <li>
-                  <a href="./when_to_exercise.html">Exercising</a>
+                  <a href="./when_to_exercise.html">When To Exercise</a>
                 </li>
               
                 <li>
