--- a/calls_and_puts.html
+++ b/calls_and_puts.html
@@ -94,7 +94,7 @@ Calls and Puts
         </td>
         <td class="main_content">
           
-There are two types of options:
+There are two types of options<sup>1</sup>:
 <ul>
 	<li><b>Calls</b> give the owner the right to buy something</li>
 	<li><b>Puts</b> give the owner the right to sell something</li>
@@ -104,7 +104,7 @@ It's important to recognize that buying calls and buying puts do <i>not</i> give
         </td>
         <td class="parenthetical">
           
-Calls and puts may give owners completely different rights, but eventually you'll learn that the difference is almost negligible.
+1. Calls and puts may give owners completely different rights, but eventually you'll learn that the difference is almost negligible.
 
         </td>
       </tr>
