--- a/derivatives.html
+++ b/derivatives.html
@@ -94,7 +94,7 @@ Derivatives
         </td>
         <td class="main_content">
           
-Options are a type of derivative. Derivatives are simply contracts or agreements between two parties. The value of derivatives is <i>derived</i> from some underlying product, as opposed to assets like stocks or bonds which represent ownership of something.
+Options are a type of derivative. Derivatives are simply contracts or agreements between two parties. The value of derivatives is <i>derived</i> from some underlying product<sup>1</sup>, as opposed to assets like stocks or bonds which represent ownership of something.
 
 Examples of derivatives in finance:
 <ul>
@@ -113,7 +113,7 @@ Examples of derivatives outside of finance:
         </td>
         <td class="parenthetical">
           
-The underlying product for derivatives can be almost anything: stocks, indices, commodities, or even other derivatives.
+1. The underlying product for derivatives can be almost anything: stocks, indices, commodities, or even other derivatives.
 
         </td>
       </tr>
